fix debian packaging

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: nymea-remoteproxy
 Section: utils
 Priority: options
-Maintainer: Michael Zanetti <michael.zanetti@guh.io>
+Maintainer: Simon Stürz <simon.stürz@guh.io>
 Build-depends: debhelper (>= 0.0.0),
     libqt5websockets5-dev,
 Standards-Version: 3.9.3
@@ -13,19 +13,19 @@ Depends: ${shlibs:Depends},
 Description: The nymea remote proxy server
   The nymea remote proxy server
 
-Package: libnymea-remoteproxy
-Architecture: any
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
-Description: The nymea remote proxy server
-  The nymea remote proxy server
-
 Package: libnymea-remoteproxyclient
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
-Description: The nymea remote proxy server
-  The nymea remote proxy server
+Description: The nymea remote proxy server client lib
+  The nymea remote proxy server client lib
+
+Package: libnymea-remoteproxyclient-dev
+Architecture: any
+Depends: ${shlibs:Depends},
+         ${misc:Depends},
+Description: The nymea remote proxy server client lib, development files
+  The nymea remote proxy server client lib, development files
 
 Package: nymea-remoteproxy-tests
 Architecture: any
