Add first online test

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ Thumbs.db
 
 coverage-html
 client/nymea-remoteproxy-client
+tests/test-offline/nymea-remoteproxy-tests-offline
+tests/test-online/nymea-remoteproxy-tests-online
