--- a/nymea-remoteproxy.conf
+++ b/nymea-remoteproxy.conf
@@ -1,4 +1,4 @@
-[General]
+name=nymea-remoteproxy
 writeLogs=false
 logFile=/var/log/nymea-remoteproxy.log
 certificate=/etc/ssl/certs/ssl-cert-snakeoil.pem
