--- a/debian/libnymea-remoteproxyclient.install.in
+++ b/debian/libnymea-remoteproxyclient.install.in
@@ -1,1 +1,3 @@
-usr/lib/@DEB_HOST_MULTIARCH@/libnymea-remoteproxyclient.so.*
+usr/lib/@DEB_HOST_MULTIARCH@/libnymea-remoteproxyclient.so.1
+usr/lib/@DEB_HOST_MULTIARCH@/libnymea-remoteproxyclient.so.1.0
+usr/lib/@DEB_HOST_MULTIARCH@/libnymea-remoteproxyclient.so.1.0.0
