--- a/nymea-remoteproxy.conf
+++ b/nymea-remoteproxy.conf
@@ -3,11 +3,12 @@ writeLogs=false
 logFile=/var/log/nymea-remoteproxy.log
 certificate=/etc/ssl/certs/ssl-cert-snakeoil.pem
 certificateKey=/etc/ssl/private/ssl-cert-snakeoil.key
+certificateChain=
 
 [WebSocketServer]
-host=0.0.0.0
+host=127.0.0.1
 port=443
 
 [TcpServer]
-host=0.0.0.0
+host=127.0.0.1
 port=80
