--- a/nymea-remoteproxy.conf
+++ b/nymea-remoteproxy.conf
@@ -1,6 +1,7 @@
 name=nymea-remoteproxy
 writeLogs=false
 logFile=/var/log/nymea-remoteproxy.log
+monitorSocket=/tmp/nymea-remoteproxy.monitor
 certificate=/etc/ssl/certs/ssl-cert-snakeoil.pem
 certificateKey=/etc/ssl/private/ssl-cert-snakeoil.key
 certificateChain=
