Update configurations and add monitor socket

--- a/nymea-remoteproxy.conf
+++ b/nymea-remoteproxy.conf
@@ -1,7 +1,10 @@
+[ProxyServer]
 name=nymea-remoteproxy
 writeLogs=false
 logFile=/var/log/nymea-remoteproxy.log
-monitorSocket=/tmp/nymea-remoteproxy.monitor
+monitorSocket=/tmp/nymea-remoteproxy-monitor.sock
+
+[SSL]
 certificate=/etc/ssl/certs/ssl-cert-snakeoil.pem
 certificateKey=/etc/ssl/private/ssl-cert-snakeoil.key
 certificateChain=
