--- a/tests/resources/test-configuration.conf
+++ b/tests/resources/test-configuration.conf
@@ -1,8 +1,13 @@
+[ProxyServer]
 name=test-nymea-remoteproxy
 writeLogs=false
 logFile=/var/log/nymea-remoteproxy.log
+monitorSocket=/tmp/nymea-remoteproxy-test.sock
+
+[SSL]
 certificate=:/test-certificate.crt
 certificateKey=:/test-certificate.key
+certificateChain=
 
 [WebSocketServer]
 host=127.0.0.1
