Add timing configurations and timeout tests

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ tests/test-offline/nymea-remoteproxy-tests-offline
 tests/test-online/nymea-remoteproxy-tests-online
 .crossbuilder/
 source_repository/
+*.gcno
