--- a/tests/resources/test-configuration-chain.conf
+++ b/tests/resources/test-configuration-chain.conf
@@ -1,17 +1,13 @@
 [ProxyServer]
 name=test-nymea-remoteproxy
 writeLogs=false
-logFile=/var/log/nymea-remoteproxy.log
+logFile=/var/log/nymea-remoteproxy-faulty.log
 monitorSocket=/tmp/nymea-remoteproxy-test.sock
-jsonRpcTimeout=1000
-authenticationTimeout=1500
-inactiveTimeout=1500
-aloneTimeout=1000
 
 [SSL]
 certificate=:/test-certificate.crt
 certificateKey=:/test-certificate.key
-certificateChain=
+certificateChain=:/test-certificate.crt
 
 [WebSocketServer]
 host=127.0.0.1
