--- a/tests/resources/test-configuration-faulty-certificate.conf
+++ b/tests/resources/test-configuration-faulty-certificate.conf
@@ -1,15 +1,11 @@
 [ProxyServer]
-name=test-nymea-remoteproxy
+name=test-nymea-remoteproxy-faulty-certificate
 writeLogs=false
-logFile=/var/log/nymea-remoteproxy.log
+logFile=/var/log/nymea-remoteproxy-faulty.log
 monitorSocket=/tmp/nymea-remoteproxy-test.sock
-jsonRpcTimeout=1000
-authenticationTimeout=1500
-inactiveTimeout=1500
-aloneTimeout=1000
 
 [SSL]
-certificate=:/test-certificate.crt
+certificate=:/not-existing-test-certificate.crt
 certificateKey=:/test-certificate.key
 certificateChain=
 
