--- a/tests/resources/test-configuration-faulty-chain.conf
+++ b/tests/resources/test-configuration-faulty-chain.conf
@@ -3,15 +3,11 @@ name=test-nymea-remoteproxy
 writeLogs=false
 logFile=/var/log/nymea-remoteproxy.log
 monitorSocket=/tmp/nymea-remoteproxy-test.sock
-jsonRpcTimeout=1000
-authenticationTimeout=1500
-inactiveTimeout=1500
-aloneTimeout=1000
 
 [SSL]
 certificate=:/test-certificate.crt
 certificateKey=:/test-certificate.key
-certificateChain=
+certificateChain=:/not-existing-test-certificate.crt
 
 [WebSocketServer]
 host=127.0.0.1
