--- a/tests/resources/test-configuration-faulty-key.conf
+++ b/tests/resources/test-configuration-faulty-key.conf
@@ -1,16 +1,12 @@
 [ProxyServer]
-name=test-nymea-remoteproxy
+name=test-nymea-remoteproxy-faulty-certificate
 writeLogs=false
-logFile=/var/log/nymea-remoteproxy.log
+logFile=/var/log/nymea-remoteproxy-faulty.log
 monitorSocket=/tmp/nymea-remoteproxy-test.sock
-jsonRpcTimeout=1000
-authenticationTimeout=1500
-inactiveTimeout=1500
-aloneTimeout=1000
 
 [SSL]
 certificate=:/test-certificate.crt
-certificateKey=:/test-certificate.key
+certificateKey=:/not-existing-test-certificate.key
 certificateChain=
 
 [WebSocketServer]
