Fix notification namespace and bump API version

--- a/nymea-remoteproxy.conf
+++ b/nymea-remoteproxy.conf
@@ -3,6 +3,10 @@ name=nymea-remoteproxy
 writeLogs=false
 logFile=/var/log/nymea-remoteproxy.log
 monitorSocket=/tmp/nymea-remoteproxy-monitor.sock
+jsonRpcTimeout=10000
+authenticationTimeout=8000
+inactiveTimeout=8000
+aloneTimeout=8000
 
 [SSL]
 certificate=/etc/ssl/certs/ssl-cert-snakeoil.pem
