--- a/nymea-remoteproxy.conf
+++ b/nymea-remoteproxy.conf
@@ -7,6 +7,7 @@ jsonRpcTimeout=10000
 authenticationTimeout=8000
 inactiveTimeout=8000
 aloneTimeout=8000
+awsCredentialsUrl=http://169.254.169.254/latest/meta-data/iam/security-credentials/EC2-Remote-Connection-Proxy-Role
 
 [SSL]
 certificate=/etc/ssl/certs/ssl-cert-snakeoil.pem
