--- a/nymea-remoteproxy.conf
+++ b/nymea-remoteproxy.conf
@@ -7,6 +7,10 @@ jsonRpcTimeout=10000
 authenticationTimeout=8000
 inactiveTimeout=8000
 aloneTimeout=8000
+
+[AWS]
+region=eu-west-1
+authorizerLambdaFunction=system-services-authorizer-dev-checkToken
 awsCredentialsUrl=http://169.254.169.254/latest/meta-data/iam/security-credentials/EC2-Remote-Connection-Proxy-Role
 
 [SSL]
