Add logging functionality

--- a/nymea-remoteproxy.conf
+++ b/nymea-remoteproxy.conf
@@ -2,6 +2,7 @@
 name=nymea-remoteproxy
 writeLogs=false
 logFile=/var/log/nymea-remoteproxy.log
+logEngineEnabled=false
 monitorSocket=/tmp/nymea-remoteproxy-monitor.sock
 jsonRpcTimeout=10000
 authenticationTimeout=8000
