--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: nymea-remoteproxy
 Section: utils
 Priority: options
 Maintainer: Simon Stürz <simon.stürz@guh.io>
-Build-depends: debhelper (>= 0.0.0),
+Build-depends: debhelper (>= 9.0.0),
     dh-systemd,
     libqt5websockets5-dev,
     libncurses5-dev,
@@ -94,3 +94,13 @@ Depends: ${shlibs:Depends},
          libncurses5,
 Description: The nymea remote proxy monitor tool
   The nymea remote proxy server tests
+
+Package: nymea-remoteproxy-statistics
+Architecture: any
+Depends: ${shlibs:Depends},
+         ${misc:Depends},
+         python,
+         python-gnuplot,
+Description: The nymea remote proxy statistic util
+  The nymea remote proxy server statistic tool for generating
+  server statistic reports.
