Fix emitting twice the disconnected signal and cover it with tests: Fixes #2

--- a/nymea-remoteproxy.conf
+++ b/nymea-remoteproxy.conf
@@ -2,7 +2,7 @@
 name=nymea-remoteproxy
 writeLogs=false
 logFile=/var/log/nymea-remoteproxy.log
-logEngineEnabled=false
+logEngineEnabled=true
 monitorSocket=/tmp/nymea-remoteproxy-monitor.sock
 jsonRpcTimeout=10000
 authenticationTimeout=8000
@@ -20,7 +20,7 @@ certificateKey=/etc/ssl/private/ssl-cert-snakeoil.key
 certificateChain=
 
 [WebSocketServer]
-host=127.0.0.1
+host=0.0.0.0
 port=443
 
 [TcpServer]
