Make the prject file more generic (remove debian specific install path)

--- a/debian/libnymea-remoteproxy-dev.install.in
+++ b/debian/libnymea-remoteproxy-dev.install.in
@@ -1,2 +1,2 @@
-usr/lib/@DEB_HOST_MULTIARCH@/libnymea-remoteproxy.so
+usr/lib/libnymea-remoteproxy.so usr/lib/@DEB_HOST_MULTIARCH@/
 usr/include/nymea-remoteproxy/* usr/include/nymea-remoteproxy
