--- a/debian/libnymea-remoteproxyclient-dev.install.in
+++ b/debian/libnymea-remoteproxyclient-dev.install.in
@@ -1,2 +1,2 @@
-usr/lib/libnymea-remoteproxyclient.so usr/lib/@DEB_HOST_MULTIARCH@/
+usr/lib/@DEB_HOST_MULTIARCH@/libnymea-remoteproxyclient.so
 usr/include/nymea-remoteproxyclient/* usr/include/nymea-remoteproxyclient
