--- a/debian/rules
+++ b/debian/rules
@@ -15,6 +15,9 @@ override_dh_strip:
 	dh_strip --dbg-package=libnymea-remoteproxy-dbg
 	dh_strip --dbg-package=libnymea-remoteproxyclient-dbg
 
+override_dh_auto_test:
+	make test
+
 override_dh_auto_clean:
 	dh_auto_clean
 	find . -name *.qm -exec rm {} \;
