Add tunnel debug category for cleaner log reading

--- a/nymea-remoteproxy-logging.conf
+++ b/nymea-remoteproxy-logging.conf
@@ -2,6 +2,7 @@
 *.debug=false
 Application.debug=true
 Engine.debug=true
+Tunnel.debug=true
 JsonRpc.debug=true
 JsonRpcTraffic.debug=false
 WebSocketServer.debug=true
