--- a/debian/libnymea-remoteproxyclient-dev.install.in
+++ b/debian/libnymea-remoteproxyclient-dev.install.in
@@ -1,2 +1,3 @@
 usr/lib/@DEB_HOST_MULTIARCH@/libnymea-remoteproxyclient.so
 usr/include/nymea-remoteproxyclient/* usr/include/nymea-remoteproxyclient
+usr/lib/@DEB_HOST_MULTIARCH@/pkgconfig/nymea-remoteproxyclient.pc
