--- a/debian/control
+++ b/debian/control
@@ -2,10 +2,16 @@ Source: nymea-remoteproxy
 Section: utils
 Priority: options
 Maintainer: Simon Stürz <simon.stuerz@nymea.io>
-Build-depends: debhelper (>= 0.0.0),
-    libqt5websockets5-dev,
-    libncurses5-dev,
 Standards-Version: 3.9.3
+Homepage: https://nymea.io
+Vcs-Git: https://github.com/nymea/nymea-remoteproxy.git
+Build-depends: debhelper (>= 9.0.0),
+               dpkg-dev (>= 1.16.1~),
+               pkg-config,
+               qtbase5-dev,
+               qtbase5-dev-tools,
+               libqt5websockets5-dev,
+               libncurses5-dev
 
 
 Package: nymea-remoteproxy
@@ -31,9 +37,11 @@ Description: The nymea remote proxy server lib
 Package: libnymea-remoteproxy-dev
 Architecture: any
 Section: libdevel
+Multi-Arch: same
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libnymea-remoteproxy (= ${binary:Version}),
+         pkg-config
 Description: The nymea remote proxy server lib - development files
   The nymea remote proxy server lib - development files
 
@@ -59,9 +67,11 @@ Description: The nymea remote proxy server client lib
 Package: libnymea-remoteproxyclient-dev
 Architecture: any
 Section: libdevel
+Multi-Arch: same
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libnymea-remoteproxyclient (= ${binary:Version}),
+         pkg-config
 Description: The nymea remote proxy server client lib - development files
   The nymea remote proxy server client lib - development files
 
@@ -81,4 +91,4 @@ Depends: ${shlibs:Depends},
          ${misc:Depends},
          libncurses5,
 Description: The nymea remote proxy monitor tool
-  The nymea remote proxy server tests
+  The nymea remote proxy server monitor
