Finish and test first working tunnel proxy connection

--- a/nymea-remoteproxy.conf
+++ b/nymea-remoteproxy.conf
@@ -27,3 +27,12 @@ port=443
 [TcpServer]
 host=127.0.0.1
 port=80
+
+[WebSocketServerTunnelProxy]
+host=127.0.0.1
+port=2212
+
+[TcpServerTunnelProxy]
+host=127.0.0.1
+port=2213
+
