--- a/tests/resources/test-configuration-chain.conf
+++ b/tests/resources/test-configuration-chain.conf
@@ -16,3 +16,11 @@ port=1212
 [TcpServer]
 host=127.0.0.1
 port=1213
+
+[WebSocketServerTunnelProxy]
+host=127.0.0.1
+port=2212
+
+[TcpServerTunnelProxy]
+host=127.0.0.1
+port=2213
