--- a/debian/rules
+++ b/debian/rules
@@ -19,5 +19,7 @@ override_dh_auto_clean:
 	dh_auto_clean
 	rm -rf $(PREPROCESS_FILES:.in=)
 
+override_dh_auto_test:
+	dh_auto_test -- -k TESTARGS="-o -,txt -o test-results.xml,xunitxml"
 %:
 	dh $@ --buildsystem=qmake --with systemd --parallel
