--- a/nymea-remoteproxy-logging.conf
+++ b/nymea-remoteproxy-logging.conf
@@ -7,10 +7,16 @@ JsonRpc.debug=true
 JsonRpcTraffic.debug=false
 WebSocketServer.debug=true
 WebSocketServerTraffic.debug=false
+TcpSocketServer.debug=true
+TcpSocketServerTraffic.debug=false
+UnixSocketServer.debug=true
+UnixSocketServerTraffic.debug=false
 Authentication.debug=true
 AuthenticationProcess.debug=false
 ProxyServer.debug=true
 ProxyServerTraffic.debug=false
+TunnelProxyServer.debug=true
+TunnelProxyServerTraffic.debug=false
 MonitorServer.debug=true
 AwsCredentialsProvider.debug=false
 AwsCredentialsProviderTraffic.debug=false
