--- a/nymea-remoteproxy.conf
+++ b/nymea-remoteproxy.conf
@@ -28,6 +28,9 @@ port=443
 host=127.0.0.1
 port=80
 
+[LocalSocketServer]
+localSocketFileName=/run/nymea-remoteproxy.socket
+
 [WebSocketServerTunnelProxy]
 host=127.0.0.1
 port=2212
