Update unix socket settings and fix tests

--- a/nymea-remoteproxy.conf
+++ b/nymea-remoteproxy.conf
@@ -28,8 +28,8 @@ port=443
 host=127.0.0.1
 port=80
 
-[LocalSocketServer]
-localSocketFileName=/run/nymea-remoteproxy.socket
+[UnixSocketServer]
+unixSocketFileName=/run/nymea-remoteproxy.socket
 
 [WebSocketServerTunnelProxy]
 host=127.0.0.1
