--- a/tests/resources/test-configuration.conf
+++ b/tests/resources/test-configuration.conf
@@ -21,6 +21,9 @@ port=1212
 host=127.0.0.1
 port=1213
 
+[UnixSocketServer]
+unixSocketFileName=/tmp/nymea-remoteproxy.socket
+
 [WebSocketServerTunnelProxy]
 host=127.0.0.1
 port=2212
