--- a/tests/resources/test-configuration-faulty-certificate.conf
+++ b/tests/resources/test-configuration-faulty-certificate.conf
@@ -17,6 +17,9 @@ port=1212
 host=127.0.0.1
 port=1213
 
+[UnixSocketServer]
+unixSocketFileName=/tmp/nymea-remoteproxy.socket
+
 [WebSocketServerTunnelProxy]
 host=127.0.0.1
 port=2212
