Add random traffic generator for test clients

--- a/nymea-remoteproxy.conf
+++ b/nymea-remoteproxy.conf
@@ -15,7 +15,7 @@ authorizerLambdaFunction=system-services-authorizer-dev-checkToken
 awsCredentialsUrl=http://169.254.169.254/latest/meta-data/iam/security-credentials/EC2-Remote-Connection-Proxy-Role
 
 [SSL]
-enabled=true
+enabled=false
 certificate=/etc/ssl/certs/ssl-cert-snakeoil.pem
 certificateKey=/etc/ssl/private/ssl-cert-snakeoil.key
 certificateChain=
