--- a/version.h.in
+++ b/version.h.in
@@ -34,5 +34,6 @@
 #define SERVER_NAME_STRING '"$$SERVER_NAME"'
 #define SERVER_VERSION_STRING '"$$SERVER_VERSION"'
 #define API_VERSION_STRING '"$$API_VERSION_MAJOR.$$API_VERSION_MINOR"'
+#define COPYRIGHT_YEAR_STRING '"$$COPYRIGHT_YEAR"'
 
 #endif
