--- a/debian/rules
+++ b/debian/rules
@@ -20,6 +20,7 @@ override_dh_auto_clean:
 	rm -rf $(PREPROCESS_FILES:.in=)
 
 override_dh_auto_test:
-	dh_auto_test -- -k TESTARGS="-o -,txt -o test-results.xml,xunitxml"
+	dh_auto_test -- -k TESTARGS="-maxwarnings 0"
+
 %:
 	dh $@ --buildsystem=qmake --with systemd --parallel
