--- a/version.h.in
+++ b/version.h.in
@@ -31,9 +31,9 @@
 #ifndef VERSION_H
 #define VERSION_H
 
-#define SERVER_NAME_STRING '"$$SERVER_NAME"'
-#define SERVER_VERSION_STRING '"$$SERVER_VERSION"'
-#define API_VERSION_STRING '"$$API_VERSION_MAJOR.$$API_VERSION_MINOR"'
-#define COPYRIGHT_YEAR_STRING '"$$COPYRIGHT_YEAR"'
+#define SERVER_NAME_STRING "@SERVER_NAME@"
+#define SERVER_VERSION_STRING "@NYMEA_SERVER_VERSION@"
+#define API_VERSION_STRING "@API_VERSION_MAJOR@.@API_VERSION_MINOR@"
+#define COPYRIGHT_YEAR_STRING "@COPYRIGHT_YEAR@"
 
 #endif
