--- a/debian-qt5/control
+++ b/debian-qt5/control
@@ -1,12 +1,12 @@
 Source: nymea-remoteproxy
 Section: utils
 Priority: optional
-Maintainer: nymea GmbH <developer@nymea.io>
+Maintainer: chargebyte austria GmbH <contact@nymea.io>
 Standards-Version: 4.6.0
 Homepage: https://nymea.io
 Vcs-Git: https://github.com/nymea/nymea-remoteproxy.git
-Build-depends: debhelper (>= 9.0.0),
-               dpkg-dev (>= 1.16.1~),
+Build-depends: debhelper,
+               dpkg-dev,
                pkg-config,
                qtbase5-dev,
                qtbase5-dev-tools,
